Work done at home on the 27,03/2024, from 10:00-00:00h.